# lightning-talk-pratt-parsing

./: .gitignore  README.md  build.sh  index.html  pyproject.toml
.devcontainer/: devcontainer.json
assets/codes/: simple_calculator.py
src/: actual_simple_calculator.py  animation.py
src/manim_project/: __init__.py
