[project]
name = "manim-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shota Minami", email = "shouth373@gmail.com" }
]
dependencies = [
    "manim>=0.18.1",
    "manim-slides>=5.1.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/manim_project"]
